# stark-vrf

./: README.md  Scarb.toml
cairo/: Scarb.toml
cairo/src/: ecvrf.cairo  error.cairo  lib.cairo  math.cairo
rust/: Cargo.toml  build.rs
rust/proto/: stark_vrf.proto
rust/src/: curve.rs  ecvrf.rs  error.rs  hash.rs  lib.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
