[package]
name = "stark-vrf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-serialize = "0.4.2"
starknet-crypto = "0.6.1"
starknet-ff = "0.3.7"
thiserror = "1.0.60"
